<resources>
    <string name="vextil_version_code">7</string>
    <string name="vextil_sub_version_code">S</string>
    <string name="vextil_menuitem_updater">Updater</string>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_dialog_title_default">Select activity</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="abs__share_action_provider_share_with">Share with...</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="account_expired_alert">Your WhatsApp service for %1$s expired on %2$s. Purchase service?</string>
    <string name="account_info_account_num">Phone number</string>
    <string name="account_info_check_eligibility">Checking eligibility...</string>
    <string name="account_info_confirm_continue_with_purchase">Do you still want to purchase service?</string>
    <string name="account_info_desc">Your service is attached to the phone number listed above. You can freely switch your mobile device, reinstall, or upgrade the software as long as your service phone number stays the same. We hope you enjoy our service.</string>
    <string name="account_info_details">Details</string>
    <string name="account_info_expiration">Service expiration</string>
    <string name="account_info_gave_service">Service purchased for %1$s.</string>
    <string name="account_info_purchase_extension_for">Purchase extension for</string>
    <string name="account_info_received_service_from_friend">%1$s has purchased service for you.</string>
    <string name="account_info_received_service_from_unknown">A friend has purchased service for you.</string>
    <string name="account_info_send_addr_body">Your WhatsApp Messenger payment address is:</string>
    <string name="account_info_send_addr_title">WhatsApp payment address</string>
    <string name="account_info_status_expired">Expired</string>
    <string name="account_info_status_unknown">Unknown</string>
    <string name="account_sync_acct_added">WhatsApp account is added already</string>
    <string name="account_sync_add">Please wait while we are adding your account</string>
    <string name="account_sync_authenticating">Authenticating</string>
    <string name="account_sync_summary_column">WhatsApp</string>
    <string name="activity_not_found">You may not have a proper app for viewing this content</string>
    <string name="add_anonymous_contact_with_no_displayname">You may have just added a contact without giving a display name</string>
    <string name="add_broadcast_recipient">Add recipient...</string>
    <string name="add_caption">Add a caption...</string>
    <string name="add_contact">Add to contacts</string>
    <string name="add_contact_as_new_or_existing">Create a new contact or add to an existing contact?</string>
    <string name="add_contact_name_group_admin">Add %1$s to group admins</string>
    <string name="add_exist">Add to existing contact</string>
    <string name="add_group_participant">Add participant...</string>
    <string name="add_group_participants">Add group participants</string>
    <string name="add_info_to_existing_contact">Add to exist contact</string>
    <string name="add_info_to_new_contact">Add to new contact</string>
    <string name="add_shortcut">Add conversation shortcut</string>
    <string name="add_shortcut_short">Add shortcut</string>
    <string name="add_status">Add new status</string>
    <string name="address">address</string>
    <string name="adjust_date">Adjust date</string>
    <string name="alert">Alert</string>
    <string name="all_images">All pictures</string>
    <string name="all_media">All media</string>
    <string name="all_videos">All videos</string>
    <string name="amazon_fire_release_on_non_amazon_fire_device">"You've installed an unsupported version of WhatsApp. Please download the correct version from &lt;a href=\"%1$s\">Google Play Store&lt;/a> or from &lt;a href=\"%2$s\">whatsapp.com&lt;/a>."</string>
    <string name="amazon_home_hero_widget_title">Unread messages</string>
    <string name="android_wear_cant_talk">"Sorry, can't talk now"</string>
    <string name="android_wear_haha">Haha</string>
    <string name="android_wear_lol">Lol</string>
    <string name="android_wear_nice">Nice</string>
    <string name="android_wear_no">No</string>
    <string name="android_wear_ok">Ok</string>
    <string name="android_wear_on_my_way">On my way</string>
    <string name="android_wear_sad_emoji">:-(</string>
    <string name="android_wear_see_you_soon">See you soon</string>
    <string name="android_wear_smile_emoji">:-)</string>
    <string name="android_wear_thanks">Thanks</string>
    <string name="android_wear_yes">Yes</string>
    <string name="answer_the_call">Answer</string>
    <string name="app_name">WhatsApp</string>
    <string name="archive_all_chats">Archive all conversations</string>
    <string name="archive_all_chats_ask">Are you sure you want to archive ALL conversations?</string>
    <string name="archive_broadcast">Archive broadcast list</string>
    <string name="archive_conversation">Archive conversation</string>
    <string name="archived_chats">Archived conversations</string>
    <string name="archived_chats_count">Archived conversations (%d)</string>
    <string name="assign_to_contact">Assign to contact</string>
    <string name="attach">Attach</string>
    <string name="attach_audio">Audio</string>
    <string name="attach_contact">Contact</string>
    <string name="attach_location">Location</string>
    <string name="attach_media">Attach media</string>
    <string name="attach_picture_from_camera">Photo</string>
    <string name="attach_picture_from_gallery">Gallery</string>
    <string name="attach_video">Video</string>
    <string name="audio_note_slide_to_cancel">SLIDE TO CANCEL</string>
    <string name="audio_note_tip">Hold to record, release to send</string>
    <string name="audio_note_tip_2">Please record a longer message</string>
    <string name="audio_note_top_mic_tip">Please speak to the microphone on top of your phone</string>
    <string name="block">Block</string>
    <string name="block_ask">Are you sure you want to block this contact?</string>
    <string name="block_list_desc_1">"Tap on the icon in the top right corner to select a contact to block.

Blocked contacts will no longer be able to send you messages."</string>
    <string name="block_list_header">Blocked contacts</string>
    <string name="block_list_menu_unblock">Unblock %s</string>
    <string name="block_timeout">Failed to block a contact now, Please try again later!</string>
    <string name="broadcast_msg">Broadcast message</string>
    <string name="broadcast_reach_limit">Broadcast to a maximum of %1$d people at a time.</string>
    <string name="broadcast_recipient_hint">Type contact name...</string>
    <string name="broadcast_recipients_list">Recipients: %d</string>
    <string name="broadcast_to_recipients_note">"IMPORTANT:
Only contacts with %s in their address book will receive your broadcast messages."</string>
    <string name="broadcasts">Broadcasts</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_play_store">Play Store</string>
    <string name="btn_storage_settings">Storage settings</string>
    <string name="btn_uninstall">Uninstall</string>
    <string name="button_download">Download</string>
    <string name="call">Call</string>
    <string name="call_canceled">Canceled</string>
    <string name="call_charges">Warning: Carrier charges may apply. Calls are placed through your mobile carrier, not over the Internet.</string>
    <string name="call_contact">Call contact</string>
    <string name="call_contact_name">Call %1$s</string>
    <string name="call_details">Call info</string>
    <string name="call_icon_content_description">Small WhatsApp Icon associated with VoIP calling</string>
    <string name="calls">Calls</string>
    <string name="camera_failed">Camera failed</string>
    <string name="camera_photo_preview_title">Send WhatsApp photo</string>
    <string name="camera_shortcut">WhatsApp Camera</string>
    <string name="camera_title">Send WhatsApp photo or video</string>
    <string name="camera_video_preview_title">Send WhatsApp video</string>
    <string name="can_not_start_voip_call_in_airplane_mode">To place a WhatsApp call, first turn off Airplane mode.</string>
    <string name="can_not_start_voip_call_in_phone_call">"You cannot place a WhatsApp call if you're already on a phone call."</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_send_not_a_group_participant">"You can't send messages to this group because you're no longer a participant."</string>
    <string name="cannot_send_selected_file">"Can't send this media file. Either you picked the wrong file or the format is not supported."</string>
    <string name="cannot_send_to_blocked_contact_1">"Can't send a message to blocked contact %s."</string>
    <string name="cannot_send_to_group_not_member">"ERROR: can't send to this group, not a participant"</string>
    <string name="cannot_share_selected_file">Cannot share this file.</string>
    <string name="cannot_start_camera">Cannot start camera</string>
    <string name="change_number_generic_fail_message">We were unable to complete your account number migration.</string>
    <string name="change_number_new_country_code_suggestion">"Since you're changing countries, change any local numbers in your address book to be in international format with the country code."</string>
    <string name="change_number_new_number">Please enter your new country code and phone number:</string>
    <string name="change_number_old_number">Please enter your old country code and phone number:</string>
    <string name="eula_title">Welcome to WhatsApp</string>
    <string name="msg_store_backup_found_registration">Chat backup found</string>
    <string name="msg_store_creation_backup_message">"Restore your chat history from backup. If you don't restore now, you won't be able to restore later."</string>
    <string name="msg_store_do_not_restore_no_thanks">Skip restore</string>
    <string name="msg_store_restore_db">Restore</string>
    <string name="msg_store_restoring_progress_descr">This can take a while</string>
    <string name="msg_store_restoring_progress_title">Restoring...</string>
    <string name="no_places_found">No places found</string>
    <string name="place_list_title">Or select from nearby places</string>
    <string name="search_in_contacts">Search in WhatsApp contacts</string>
    <string name="search_no_chats">No chats found</string>
    <string name="send_your_current_location">Send your current location</string>
    <string name="welcome_chats_message">To start messaging contacts who have WhatsApp, tap on the \"New message\" icon at the top of your screen.</string>
</resources>