<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="right|center" android:orientation="vertical" android:id="@id/paper_clip_layout" android:background="@drawable/abs__menu_dropdown_panel_holo_dark" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="0.0dip" android:layout_alignParentRight="true"
  xmlns:android="http://schemas.android.com/apk/res/android" android:paddingTop="15dp" android:paddingBottom="15dp">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <FrameLayout android:id="@id/pickfiletype_gallery_image" android:layout_width="@dimen/quickaction_button_h" android:layout_height="@dimen/quickaction_button_v" style="@style/ActionBarButtonStyle">
            <com.whatsapp.CondensedTextView android:ellipsize="end" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/attach_picture_from_gallery" android:maxLines="1" android:singleLine="true" android:drawableTop="@drawable/attach_gallery" android:textColor="#000000"/>
        </FrameLayout>
        <ImageView android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/divider_attach_vertical" android:scaleType="fitXY" />
        <FrameLayout android:id="@id/pickfiletype_camera_image" android:layout_width="@dimen/quickaction_button_h" android:layout_height="@dimen/quickaction_button_v" style="@style/ActionBarButtonStyle">
            <com.whatsapp.CondensedTextView android:ellipsize="end" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/attach_picture_from_camera" android:maxLines="1" android:singleLine="true" android:drawableTop="@drawable/attach_camera" android:textColor="#000000"/>
        </FrameLayout>
        <ImageView android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/divider_attach_vertical" android:scaleType="fitXY" />
        <FrameLayout android:id="@id/pickfiletype_gallery_video" android:layout_width="@dimen/quickaction_button_h" android:layout_height="@dimen/quickaction_button_v" style="@style/ActionBarButtonStyle">
            <com.whatsapp.CondensedTextView android:ellipsize="end" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="center" android:text="@string/attach_video" android:maxLines="1" android:singleLine="true" android:drawableTop="@drawable/attach_video" android:textColor="#000000"/>
        </FrameLayout>
    </LinearLayout>
    <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/divider_attach_horizontal" android:scaleType="fitXY" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <FrameLayout android:id="@id/pickfiletype_audio" android:layout_width="@dimen/quickaction_button_h" android:layout_height="@dimen/quickaction_button_v" style="@style/ActionBarButtonStyle">
            <com.whatsapp.CondensedTextView android:ellipsize="end" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="center" android:text="@string/attach_audio" android:maxLines="1" android:singleLine="true" android:drawableTop="@drawable/attach_audio" android:textColor="#000000"/>
        </FrameLayout>
        <ImageView android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/divider_attach_vertical" android:scaleType="fitXY" />
        <FrameLayout android:id="@id/pickfiletype_location" android:layout_width="@dimen/quickaction_button_h" android:layout_height="@dimen/quickaction_button_v" style="@style/ActionBarButtonStyle">
            <com.whatsapp.CondensedTextView android:ellipsize="end" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="center" android:text="@string/attach_location" android:maxLines="1" android:singleLine="true" android:drawableTop="@drawable/attach_location" android:textColor="#000000"/>
        </FrameLayout>
        <ImageView android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/divider_attach_vertical" android:scaleType="fitXY" />
        <FrameLayout android:id="@id/pickfiletype_contact" android:layout_width="@dimen/quickaction_button_h" android:layout_height="@dimen/quickaction_button_v" style="@style/ActionBarButtonStyle">
            <com.whatsapp.CondensedTextView android:ellipsize="end" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="center" android:text="@string/attach_contact" android:maxLines="1" android:singleLine="true" android:drawableTop="@drawable/attach_contact" android:textColor="#000000"/>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>