<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:animateLayoutChanges="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/map_frame" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.4">
        <FrameLayout android:id="@id/map_holder" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <ProgressBar android:id="@id/progressbar_map" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" style="?android:attr/progressBarStyleLarge" />
        <ImageView android:id="@id/full_screen" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/btn_map_fullscreen_on" android:layout_alignParentLeft="true" />
        <ImageView android:id="@id/my_location" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/btn_compass_mode" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <ImageView android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/edge_bottom" android:scaleType="fitXY" />
    <Button android:textSize="16.0sp" android:id="@id/send_my_location_btn" android:background="@drawable/send_my_location_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="6.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="6.0dip" android:text="@string/send_your_current_location" />
    <LinearLayout android:orientation="vertical" android:id="@id/places_holder" android:background="@drawable/panel" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="6.0dip" android:layout_weight="0.7">
        <TextView android:id="@id/places_title" android:text="@string/place_list_title" style="@style/TextGrayDivider" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ListView android:id="@id/places_list" android:layout_width="fill_parent" android:layout_height="fill_parent" android:cacheColorHint="#00000000" android:divider="@drawable/divider_gray" android:dividerHeight="0.5dip" />
            <ProgressBar android:id="@id/progressbar_small" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" style="?android:attr/progressBarStyleLarge" />
            <TextView android:id="@id/places_empty" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_places_found" android:layout_centerInParent="true" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>