<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/chats_layout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/conversations_search_empty" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="18.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/search_no_matches" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="67.0dip" android:text="@string/search_no_chats" />
        <Button android:id="@id/search_in_contacts" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/search_in_contacts" />
    </LinearLayout>
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <ListView android:id="@android:id/list" android:layout_width="fill_parent" android:layout_height="fill_parent" android:textFilterEnabled="true" android:cacheColorHint="@android:color/transparent" android:dividerHeight="0dp" android:divider="@android:color/transparent"/>
        <ImageView
            android:src="@drawable/wamd_fab_shadow"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"/>
        <ImageButton
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:tint="@android:color/white"
            android:id="@+id/fab"
            android:onClick="fab"
            android:src="@drawable/ic_action_create"
            android:background="@drawable/wamd_ripple_light_color"/>
    </RelativeLayout>
    <FrameLayout android:gravity="center" android:id="@id/conversations_empty" android:background="#fffafafa" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:paddingLeft="32.0dip" android:paddingRight="32.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_gravity="center" android:paddingTop="32.0dip" android:layout_width="wrap_content" android:layout_height="0.0dip" android:src="@drawable/icon_new_chat_big" android:layout_weight="1.0" />
            <TextView android:textSize="17.0sp" android:textColor="#ff565656" android:gravity="center" android:paddingTop="48.0dip" android:paddingBottom="48.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/welcome_chats_message" style="@style/Text" />
        </LinearLayout>
    </FrameLayout>
    <include android:id="@id/conversations_empty_no_contacts" layout="@layout/empty_tell_a_friend" />
</LinearLayout>